--- a/scss/layout/_header-index.scss
+++ b/scss/layout/_header-index.scss
@@ -13,8 +13,42 @@
         display: flex;
         justify-content: end;
         text-shadow: 3px 3px 5px white;
-        
+        -webkit-animation: headerFormulario 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s 2 both;
+	    animation: headerFormulario 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s 2 both;
     }
+    @-webkit-keyframes headerFormulario {
+        0% {
+          -webkit-transform: translateY(-600px) rotateX(-30deg) scale(0);
+                  transform: translateY(-600px) rotateX(-30deg) scale(0);
+          -webkit-transform-origin: 50% 100%;
+                  transform-origin: 50% 100%;
+          opacity: 0;
+        }
+        100% {
+          -webkit-transform: translateY(0) rotateX(0) scale(1);
+                  transform: translateY(0) rotateX(0) scale(1);
+          -webkit-transform-origin: 50% 1400px;
+                  transform-origin: 50% 1400px;
+          opacity: 1;
+        }
+      }
+      @keyframes headerFormulario {
+        0% {
+          -webkit-transform: translateY(-600px) rotateX(-30deg) scale(0);
+                  transform: translateY(-600px) rotateX(-30deg) scale(0);
+          -webkit-transform-origin: 50% 100%;
+                  transform-origin: 50% 100%;
+          opacity: 0;
+        }
+        100% {
+          -webkit-transform: translateY(0) rotateX(0) scale(1);
+                  transform: translateY(0) rotateX(0) scale(1);
+          -webkit-transform-origin: 50% 1400px;
+                  transform-origin: 50% 1400px;
+          opacity: 1;
+        }
+      }
+      
             h1 {
         font-family: 'Castoro Titling', cursive;
         letter-spacing: 1px;
@@ -30,8 +64,6 @@
     
     &::selection{
         background-color: $color-1;
-        
-    }
-    
+}
 }
 }
